<?xml version="1.0" encoding="utf-8"?>
<resources>    
<string name="app_name">KidLogger</string>
<string name="service_started">Logging is started</string>
<string name="service_stopped">Logging is stopped</string>
<string name="start_label">Start Log</string>
<string name="stop_label">Stop Log</string>	
<string name="set_label">Settings</string>
<string name="settings_title">Settings</string>
<string name="about_title">About KidLogger</string>
<string name="about_label">About</string>
<string name="preview_label">Preview log file</string>
<string name="show_logs_title">Logs view</string>
<string name="troubleshoot_title">Troubleshoot</string>
<string name="dialog_mess_for_numeral">Please, use only numeric characters</string>
<string name="files_list_title">The list of log files</string>
<string name="upload_link">http://kidlogger.net/upload-v2/</string>
<string name="pref_gps_title">Coordinates</string>
<string name="pref_gps_summ">Log coordinates</string>
<string name="pref_wifi_title">WiFi</string>
<string name="pref_wifi_summ">Log wifi connections</string>
<string name="pref_sms_title">SMS</string>
<string name="pref_sms_summ">Log sent and received SMS</string>
<string name="pref_calls_title">Calls</string>
<string name="pref_calls_summ">Log all calls</string>
<string name="pref_idle_title">Log Idle</string>
<string name="pref_url_title">Web history</string>
<string name="pref_url_summ">Log visited web site</string>
<string name="pref_usb_title">USB</string>
<string name="pref_usb_summ">Log USB connections</string>
<string name="pref_tasks_title">Tasks</string>
<string name="pref_tasks_summ">Log opened applications</string>
<string name="pref_clipboard_title">Clipboard</string>
<string name="pref_clipboard_summ">Log clipboard text</string>
<string name="pref_power_title">Power</string>
<string name="pref_power_summ">Log power off event</string>
<string name="pref_media_title">SD card</string>
<string name="pref_media_summ">Log SD card removal</string>
<string name="pref_gsm_title">GSM</string>
<string name="pref_gsm_summ">Log GSM state and operator name</string>
<string name="pref_air_title">Log Airplane mode</string>
<string name="pref_keystroke_title">Log typed keystrokes</string>
<string name="pref_keystroke_summ">Requires Soft Keyboard PRO app to be installed</string>
<string name="pref_devsettings_title">Upload Log files</string>
<string name="pref_devsettings_summ">Uploading log files uses GPRS or WiFi traffic. Maximum 50 KB for a day. Register for free at KidLogger.net and get your Device ID.</string>
<string name="pref_uplogs_title">Upload logs</string>
<string name="pref_devid_title">Device ID</string>
<string name="pref_devid_summ">Click to fill Device ID field</string>
<string name="pref_delivinterval_title">Upload interval</string>
<string name="pref_delivinterval_summ">5 min</string>
<string name="pref_gpsrefresh_title">GPS usage interval</string>
<string name="pref_gpsrefresh_summ">5 min</string>
<string name="pref_gpsdist_title">GPS log distance</string>
<string name="pref_gpsdist_summ">20 m</string>
<string name="pref_accesspass_title">Access Password</string>
<string name="pref_accesspass_summ">123456</string>
<string name="sendlogsbtn_label">Send Bug report</string>
<string name="logsview_text">There was no errors found.</string>
<string name="tr_testresult_text">Test result</string>
<string name="tr_sendtestresult_btn_text">Upload test file</string>
<string name="tr_filesent_text">File sent:</string>
<string name="tr_namesize_text">Name and size</string>
<string name="tr_status_text">Status:</string>
<string name="dialog_title_warning">Warning!</string>
<string name="kl_dialog_message">Please restart KidLogger to apply new settings</string>
<string name="kls_gps_message">Please enable GPS to be able log your precise coordinates.\r\n</string>
<string name="str_wait_message">Please wait a few seconds</string>
<string name="str_send_message">Click here to Upload test log file now:</string>
<string name="s_summary_text">Click to fill device field.</string>
<string name="s_dialog_message">This feature requires &lt;a href=\&quot;https://market.android.com/details?id=net.kidlogger.kidloggerkeyboard&amp;feature=search_result&amp;hl=en\&quot;&gt;\&quot;Soft Keyboard PRO\&quot;&lt;/a&gt; input method.&lt;br&gt;&lt;br&gt;1. Install and activate \&quot;Soft Keyboard PRO\&quot; as input method.&lt;br&gt;&lt;br&gt;2. Tap and hold (or long press) any text input field &gt;Input method &gt;\&quot;Soft Keyboard PRO\&quot;.</string>
<string name="pref_contact_title">Logging Contact Name</string>
<string name="pref_contact_summ">Log Contact Name from contacts with  incomming / outgoing calls</string>
<string name="pref_cellloc_title">Logging GSM Cell</string>
<string name="pref_cellloc_summ">Logging GSM Cell location</string>
<string name="pref_record_title">Audio record calls</string>
<string name="pref_record_summ">Audio record incomming / outgoing calls</string>
<string name="pref_audio_sett">Audio record settings</string>
<string name="pref_recincalls_title">Record incoming calls</string>
<string name="pref_recoutcalls_title">Record outgoing calls</string>
<string name="pref_maxtimerec_tile">Time for records</string>
<string name="pref_maxtimerec_summ">30 sec</string>
<string name="pref_maxsizerec_title">Size for records</string>
<string name="pref_maxsizerec_summ">0.3 Mb</string>
<string name="pref_uploadrec_title">Upload records</string>
<string name="pref_uploadrec_summ">Upload records on kidlogger.net</string>
<string name="pref_delrec_title">Delete record</string>
<string name="pref_delrec_summ">Delete a record after the one is uploaded on kiglogger.net</string>
<string name="pref_keeprectime_title">Keep records (days)</string>
<string name="pref_keeprectime_summ">5 days</string>
<string name="pref_photos_title">Log Photos</string>
<string name="pref_photos_summ">Log photos taken by Camera</string>
<string name="pref_upphotos_title">Upload Photos</string>
<string name="pref_upphotos_summ">Upload photos on kidlogger.net</string>
<string name="webview_context_menu_title">Context menu</string>
<string name="webview_context_menu_view_html">Preview HTML code</string>
<string name="webview_context_menu_send_email">Send Log file</string>
<string name="pref_coordinates_sett">Coordinates</string>
<string name="pref_calls_sett">Log Calls</string>
<string name="pref_calls_sett_summ">Recording media files may consume phone resources</string>
<string name="pref_gpsrefresh_dialog">Enter a value from 1 min</string>
<string name="pref_gpsdist_dialog">Enter the minimum distance in meters</string>
<string name="pref_maxtimerec_dialog">Max time for records (seconds)</string>
<string name="pref_maxsizerec_dialog">Max size for records (Mb)</string>
<string name="pref_keeprectime_dialog">Period of time during wich keep records</string>
<string name="pref_delivinterval_dialog">Enter interval from 1 to 400 min</string>
<string name="pref_accesspass_dialog"> Change secret number to access KidLogger. Up to 6 digits.</string>
<string name="pref_photos_sett">Photos</string>
<string name="tr_delivqueue_text">Delivery Queue:</string>
<string name="pref_register_summ">Uploading log files uses GPRS or WiFi traffic. Maximum 50 KB for a day. Register for free at KidLogger.net and get your Device ID.\nClick here to register now.</string>

<string name="pref_max_media_upload_title">Max media files upload size</string>
<string name="pref_max_media_upload_summ">Maximum size of uploaded photos and audio files</string>
<string name="pref_max_media_upload_dialog">Maximum size 5 Mb</string>
<string name="license_link"><u>By using this software you agree with KidLogger license agreement.</u></string>
</resources>
